Forked chart.yaml

--- a/solutions/helm/nginx-deployment/Chart.yaml
+++ b/solutions/helm/nginx-deployment/Chart.yaml
@@ -5,5 +5,5 @@ keywords:
 - nginx 
 version: 1.0.0
 maintainers:
-- name: kgamanji 
-  email: kgamanji@xyz.com 
+- name: Shakiru 
+  email: akinexpress2008@yahoo.co 
